# kanea-monorepo

./: .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc  .secrets.baseline  README.md  docker-compose.local.yml  nx.json  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.base.json
apps/api/: .coveragerc  .env.development  .env.example  Dockerfile  README.md  alembic.ini  manage.py  project.json  pyproject.toml  requirements-dev.txt  requirements.txt
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial_schema.py  20260506_0002_blocked_status_and_reason.py  20260507_0003_add_oauth_columns_to_credentials.py  20260507_0004_add_role_and_invites.py  20260508_0005_agent_model_tokens_ratings.py  20260508_0006_member_last_seen_at.py  20260509_0007_task_prefix_seq_blocked.py  20260509_0008_task_comments.py  20260509_0009_task_relations.py  20260509_0010_projects.py  20260509_0011_task_activities.py  20260509_0012_team_role.py  20260509_0013_backfill_workspace_owners.py  20260509_0014_in_review_status.py  20260509_0015_task_requests.py  20260510_0016_unique_workspace_name.py  20260510_0017_users_and_member_user_id.py  20260510_0018_workspace_role_rename.py  20260510_0019_notifications.py  20260510_0020_departments_team_meta_suspension.py  20260510_0021_role_rename_user_and_audit_logs.py  20260514_0022_departments_head_id_drop_team_head.py  20260514_0023_unique_department_head_id.py  20260530_0024_unique_team_role_per_team.py  20260530_0025_backfill_dept_head_team_isolation.py  20260601_0026_users_is_superadmin.py  20260601_0027_workspaces_suspended_at.py  20260601_0028_users_ban_and_session_invalidation.py  20260601_0029_agent_api_keys.py  20260602_0030_notification_type_cross_team_request.py
apps/api/app/: main.py
apps/api/app/api/: deps.py
apps/api/app/application/: pagination.py
apps/api/app/core/: config.py
apps/api/app/domain/: entities.py  enums.py  exceptions.py
apps/api/scripts/: make_superadmin.py
apps/api/tests/: conftest.py  test_config.py
apps/api/tests/admin/: test_metrics_router.py  test_superadmin_gate.py  test_tenant_router.py  test_users_auth_gates.py  test_users_router.py  test_workspaces_router.py
apps/api/tests/agents/: test_agent_api_keys_primitives.py  test_agent_api_keys_router.py  test_agent_api_keys_service.py  test_agent_detail_and_lifecycle.py  test_agent_service.py  test_heartbeat_and_health.py
apps/api/tests/audit/: test_audit_visibility.py  test_audit_writes.py
apps/api/tests/auth/: factories.py  test_auth_service.py  test_deps.py  test_oauth_clients.py  test_oauth_router.py  test_oauth_service.py  test_password.py  test_router.py  test_tokens.py
apps/api/tests/integration/: conftest.py  (+5 more)
(+288 files in other folders)
