[tool.poetry]
name = "kanea-api"
version = "0.0.0"
description = "Kanea FastAPI service"
authors = ["Kanea <engineering@kanea.ai>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
# `~3.12` (compat-with-3.12) instead of `^3.12` (>=3.12,<4.0). Pinning to
# the same minor as the prod Dockerfile (python:3.12-slim) keeps the local
# venv aligned -- e.g. greenlet ships 3.12 wheels but lagged on 3.14, which
# silently broke alembic locally for anyone whose default `python` was 3.14.
python = "~3.12"
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.32.0" }
pydantic = { extras = ["email"], version = "^2.9.0" }
pydantic-settings = "^2.5.0"
sqlalchemy = { extras = ["asyncio"], version = "^2.0.36" }
asyncpg = "^0.30.0"
alembic = "^1.14.0"
bcrypt = "^4.2.0"
pyjwt = "^2.10.0"
email-validator = "^2.3.0"
greenlet = "^3.5.0"
httpx = "^0.27.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0.0"
black = "^24.10.0"
ruff = "^0.7.0"
mypy = "^1.13.0"
aiosqlite = "^0.20.0"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers --cov --cov-report=term-missing --cov-fail-under=90 --cov-config=.coveragerc"

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
